==> tommasopolonelli/SynthSense-WSN-UAV/SensorNode/SW/APP1_IntSensor/SensorNode/Drivers/BMP280/bmp280.c <==
#include "main.h"
#include "cmsis_os.h"
#include "bmp280.h"

int8_t i2c_reg_write(uint8_t i2c_addr, uint8_t reg_addr, uint8_t *reg_data, uint16_t length)
{

	/* Implement the I2C write routine according to the target machine. */
	if (HAL_I2C_Mem_Write
			(I2C_Hdl, (uint16_t) i2c_addr, (uint16_t) reg_addr, I2C_MEMADD_SIZE_8BIT, reg_data, length, 100)
			!= HAL_OK){
		return 1;
	}
	return 0;
}

int8_t i2c_reg_read(uint8_t i2c_addr, uint8_t reg_addr, uint8_t *reg_data, uint16_t length)
{
	if (HAL_I2C_Mem_Read(
			I2C_Hdl, (uint16_t) i2c_addr, (uint16_t) reg_addr, I2C_MEMADD_SIZE_8BIT, reg_data, length, 100)
			!= HAL_OK){
		return 1;
	}
	/* Implement the I2C read routine according to the target machine. */
	return 0;
}
