==> thevenus/stm32-imu/Core/Src/bmp280.c <==
#include "bmp280.h"

static int8_t i2c_reg_write(uint8_t i2c_addr, uint8_t reg_addr, uint8_t *reg_data, uint16_t length)
{
	/* Send START */
	LL_I2C_GenerateStartCondition(I2Cx);
	while (!LL_I2C_IsActiveFlag_SB(I2Cx));

	/* Send ADDR with WRITE*/
	LL_I2C_TransmitData8(I2Cx, (i2c_addr << 1));
	while (!LL_I2C_IsActiveFlag_ADDR(I2Cx));
	LL_I2C_ClearFlag_ADDR(I2Cx);

	/* Send reg_addr */
	LL_I2C_TransmitData8(I2Cx, reg_addr);
	while (!LL_I2C_IsActiveFlag_TXE(I2Cx));

	/* Send the data to be written */
	for (uint8_t i = 0; i < length; i++) {
		LL_I2C_TransmitData8(I2Cx, reg_data[i]);
		while (!LL_I2C_IsActiveFlag_TXE(I2Cx));
	}

	/* Send STOP */
	LL_I2C_GenerateStopCondition(I2Cx);

	return BMP280_OK;

}

static int8_t i2c_reg_read(uint8_t i2c_addr, uint8_t reg_addr, uint8_t *reg_data, uint16_t length)
{
	/* Send START */
	LL_I2C_GenerateStartCondition(I2Cx);
	while (!LL_I2C_IsActiveFlag_SB(I2Cx));

	/* Send ADDR with WRITE*/
	LL_I2C_TransmitData8(I2Cx, (i2c_addr << 1));
	while (!LL_I2C_IsActiveFlag_ADDR(I2Cx));
	LL_I2C_ClearFlag_ADDR(I2Cx);

	/* Send reg_addr */
	LL_I2C_TransmitData8(I2Cx, reg_addr);
	while (!LL_I2C_IsActiveFlag_TXE(I2Cx));

	/* Send START again and start reading the register */
	LL_I2C_GenerateStartCondition(I2Cx);
	while (!LL_I2C_IsActiveFlag_SB(I2Cx));

	if (length == 1) {
		/* Send address and clear ACK bit before clearing ADDR */
		LL_I2C_TransmitData8(I2Cx, (i2c_addr << 1)+1);
		while (!LL_I2C_IsActiveFlag_ADDR(I2Cx));
		LL_I2C_AcknowledgeNextData(I2Cx, LL_I2C_NACK);
		LL_I2C_ClearFlag_ADDR(I2Cx);

		/* Program stop bit */
		LL_I2C_GenerateStopCondition(I2Cx);

		/* Read DR after RXNE = 1 */
		while (!LL_I2C_IsActiveFlag_RXNE(I2Cx));
		reg_data[0] = LL_I2C_ReceiveData8(I2Cx);
	} else if (length == 2) {
		/* Set POS and ACK */
		LL_I2C_AcknowledgeNextData(I2Cx, LL_I2C_ACK);

		/* Send address */
		LL_I2C_TransmitData8(I2Cx, (i2c_addr << 1) + 1);

		/* Wait and clear ADDR */
		while (!LL_I2C_IsActiveFlag_ADDR(I2Cx));
		LL_I2C_ClearFlag_ADDR(I2Cx);

		/* Read first byte and clear ACK */
		while (!LL_I2C_IsActiveFlag_RXNE(I2Cx));
		LL_I2C_AcknowledgeNextData(I2Cx, LL_I2C_NACK);
		reg_data[0] = LL_I2C_ReceiveData8(I2Cx);

		/* Program STOP */
		LL_I2C_GenerateStopCondition(I2Cx);

		/* Read second byte */
		while (!LL_I2C_IsActiveFlag_RXNE(I2Cx));
		reg_data[1] = LL_I2C_ReceiveData8(I2Cx);
	} else if (length > 2) {
		/* Set ACK */
		LL_I2C_AcknowledgeNextData(I2Cx, LL_I2C_ACK);

		/* Send address and clear ADDR */
		LL_I2C_TransmitData8(I2Cx, (i2c_addr << 1)+1);
		while (!LL_I2C_IsActiveFlag_ADDR(I2Cx));
		LL_I2C_ClearFlag_ADDR(I2Cx);

		/* Receive data until last 3 bytes remain */
		for (uint8_t i=0; i < length-3; i++) {
			while (!LL_I2C_IsActiveFlag_RXNE(I2Cx));
			reg_data[i] = LL_I2C_ReceiveData8(I2Cx);
		}

		/* Wait for BTF=1 */
		while (!LL_I2C_IsActiveFlag_BTF(I2Cx));

		/* Clear ACK */
		LL_I2C_AcknowledgeNextData(I2Cx, LL_I2C_NACK);

		/* Read DataN-2 in DR => This will launch the DataN reception in the shift register */
		reg_data[length-3] = LL_I2C_ReceiveData8(I2Cx);

		/* Program STOP */
		LL_I2C_GenerateStopCondition(I2Cx);

		/* Read DataN-1 */
		reg_data[length - 2] = LL_I2C_ReceiveData8(I2Cx);

		/* Wait for RXNE = 1 and read DataN */
		while (!LL_I2C_IsActiveFlag_RXNE(I2Cx));
		reg_data[length-1] = LL_I2C_ReceiveData8(I2Cx);
	} else {
		return BMP280_E_INVALID_LEN;
	}

	return BMP280_OK;
}
